fix: adjust profile edit button spacing in mobile view

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -24,7 +24,6 @@
   font-weight: 500;
   font-size: 32px;
   line-height: 1;
-  height: 20px;
   display: -webkit-box;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -36,6 +35,7 @@
   font-size: 16px;
   font-weight: 500;
   margin: 0;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
   display: -webkit-box;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -91,7 +91,7 @@
   }
   .profile__column {
     margin: 0 0 20px;
-    max-height: 100px;
+    height: 100px;
   }
   .profile__description {
     margin: 0 0 20px;
